--- a/assets/style.css
+++ b/assets/style.css
@@ -344,28 +344,36 @@ footer{
         background: var(--c2);
 } .timeline p
 { 	                    width: 40ch;
-	               text-align: justify;
 	                max-width: 100%;
 	             word-spacing: -.015vw;
-              text-align-last: left;
 	              text-indent: 2.5vw;
-	             text-justify: auto;
-	                  hyphens: auto;
-                  -ms-hyphens: auto;
-   	             -moz-hyphens: auto;
-              -webkit-hyphens: auto;
-     -ms-hyphenate-limit-zone: 8%;
-    -moz-hyphenate-limit-zone: 8%;
- -webkit-hyphenate-limit-zone: 8%;
-    -ms-hyphenate-limit-chars: 6 3 2;
-   -moz-hyphenate-limit-chars: 6 3 2;
--webkit-hyphenate-limit-chars: 6 3 2;
-    -ms-hyphenate-limit-lines: 3;
-   -moz-hyphenate-limit-lines: 3;
--webkit-hyphenate-limit-lines: 3;
-} .timeline ul li:nth-child(odd ) p
-{  text-align-last: right;
-} @media(max-width:1000px)
+} @media(min-width:500px)
+{	.timeline p
+	{ 	                    width: 40ch;
+						max-width: 100%;
+					 word-spacing: -.015vw;
+					 text-align: justify;
+					 text-align-last: left;
+					  text-indent: 2.5vw;
+					 text-justify: auto;
+						  hyphens: auto;
+					  -ms-hyphens: auto;
+						-moz-hyphens: auto;
+				  -webkit-hyphens: auto;
+		 -ms-hyphenate-limit-zone: 8%;
+		-moz-hyphenate-limit-zone: 8%;
+	 -webkit-hyphenate-limit-zone: 8%;
+		-ms-hyphenate-limit-chars: 6 3 2;
+	   -moz-hyphenate-limit-chars: 6 3 2;
+	-webkit-hyphenate-limit-chars: 6 3 2;
+			hyphenate-limit-chars: 6 3 2;
+		-ms-hyphenate-limit-lines: 3;
+	   -moz-hyphenate-limit-lines: 3;
+	-webkit-hyphenate-limit-lines: 3;
+	} .timeline ul li:nth-child(odd ) p
+	{  text-align-last: right;
+	} 	
+}   @media(max-width:1000px)
 {  .timeline {
         width: 100%;
    }
