--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,6 @@
 	--c4: #d5f5ff  ;
     */
 } 
-
 @font-face           {
             font-family: 'Mona Sans';
                     src:
@@ -30,15 +29,16 @@
                          url('Mona-Sans.woff2') format('woff2-variations');
             font-weight: 200 900    ;
            font-stretch: 75% 125%   ;
-} html,body {
-            font-family: 'Mona Sans', 'Segoe UI', arial, ubuntu, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif; 
-       background-color: var(--bg)  ;
-                  color: var(--fg)  ;
-        text-rendering : optimizeLegibility;
--webkit-font-smoothing : antialiased;
-        scroll-behavior: smooth;
-             overflow-x: hidden;
-} ::-webkit-scrollbar
+} 
+html {
+	font-family: 'Mona Sans', 'Segoe UI', arial, ubuntu, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif; 
+	background-color: var(--bg)  ;
+	color: var(--fg)  ;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+	text-rendering : optimizeLegibility;
+	-webkit-font-smoothing : antialiased;
+}       ::-webkit-scrollbar
 		{	width: 12px;
 		}	::-webkit-scrollbar-track
 		{	background: var(--bg);
@@ -56,7 +56,6 @@
     -webkit-user-select: none;
         -ms-user-select: none;
 }
-
 a { text-decoration: none; text-transform: none }
 h1 {padding-top: 1rem;font-weight: 700;margin-top: 6rem;font-size: 2.67rem;}
 h1 + h1 { color: var(--c3); font-weight: 700; font-size: 2rem; margin-top: -1rem;padding: 0;word-spacing: 1px;}
@@ -171,7 +170,7 @@ footer{
 	60%{transform:scale(1)}
   }
   
-.container { max-width: 1100px; height: auto; margin: 40px auto; }
+.container { max-width: 1100px; height: auto; margin: 40px auto}
 .row{display:flex;flex-direction:column;padding:0;width:100%}
 .row .column,.row .wide_column{display:block;flex:1 1 auto;margin-left:0;max-width:100%;width:100%}
 .row .wide_column{flex:0 0 65%}
@@ -218,7 +217,9 @@ footer{
 	        width: 95%;
 	       height: 9rem;
 	border-radius: 20px;
-	   background: var(--c4);
+
+	background: var(--bg);
+
 	margin-bottom: 3rem;
 	   box-shadow: 4px 4px var(--c3);
 	   border-top: 2px solid var(--c3);
@@ -538,3 +539,4 @@ a span, svg, footer, hr, #goup {display:none!important}
 }
 }
 .clear { clear:both }
+
