--- a/assets/style.css
+++ b/assets/style.css
@@ -119,7 +119,7 @@ a#top, a#goup {
 	stroke:var(--c3)
 } .hidden { display:none!important }
 #goup svg{height:20px ;width:20px}
-#goup { position:fixed; display: flex; align-items: center; justify-content: center; bottom:.65rem; right:0; border-radius: 0.25rem; 
+#goup { position:fixed; display: flex; align-items: center; justify-content: center; bottom:.65rem; right:.35rem; border-radius: 0.25rem; 
 	height: 1.5rem; width: 1.5rem; padding:.3rem; fill:var(--c3);
 } #goup:hover { 
 	border-color:var(--fg);
